--- a/frontend/platform/online-learning-platform/package.json
+++ b/frontend/platform/online-learning-platform/package.json
@@ -9,9 +9,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.11.0",
     "dom-helpers": "^5.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^6.30.1",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "uncontrollable": "^9.0.0",
